tdf#99699 Do nullptr check BEFORE calling method

This fixes a segmentation fault accidently introduced with
commit a1fb4ac1991a8da2e527b64a0a01a88a8f2959e3.

Change-Id: I244e325934db22e1bffd03486cc5e84f539101f2
Reviewed-on: https://gerrit.libreoffice.org/24994
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit adc0ced6533449f33473db560b8ba27d4bd326f9)
Reviewed-on: https://gerrit.libreoffice.org/25001
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>